--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+5/8/08 - Moved to github. [Matthew Bass]
+
 2/27/08 - Updated README. [Matthew Bass]
 
 12/17/07 - Calls to #vr now accept raw HTML. [Matthew Bass]
