--- a/README
+++ b/README
@@ -20,41 +20,33 @@ Otherwise, we recommend using the git-rails gem:
 
 == Usage
 
-Insert the visualize_response method in your functional test immediately after
-an HTTP request has been sent:
-
-  def test_new
-    post :new
-    visualize_response
-    assert_select "div[id=header]"
-  end
-
-visualize_response attempts to open the response body in the default web browser.
-If you want to open the raw HTML in the default text editor instead, simply pass
-the :html symbol to the method:
-
-  def test_new
-    post :new
-    visualize_response(:html)
-    ...
-  end
-
-By default, visualize_response looks for an instance variable named @response
-and calls the #body method on it. If your page body is stored in a different
-variable, such as when testing a mailer, you can pass the raw HTML directly
-to visualize_response and it will do the right thing:
-
-  def test_mailer
-    mail = Mailer.create_notification
-    visualize_response(mail.body)
-    ...
-  end
-
-If you get tired of typing "visualize_response" everywhere, use the shortcut:
+Insert the vr method in your functional test immediately after an HTTP
+request has been sent:
 
   def test_new
     post :new
     vr
+    assert_select "div[id=header]"
+  end
+
+vr attempts to open the response body in the default web browser. If you want
+to open the raw HTML in the default text editor instead, simply pass the :html
+symbol to the method:
+
+  def test_new
+    post :new
+    vr(:html)
+    ...
+  end
+
+By default, vr looks for an instance variable named @response and calls the #body
+method on it. If your page body is stored in a different variable, such as when
+testing a mailer, you can pass the raw HTML directly to vr and it will do the
+right thing:
+
+  def test_mailer
+    mail = Mailer.create_notification
+    vr(mail.body)
     ...
   end
 
