added experimental post-commit hook

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+67/28/08 - Added experimental post-commit hook. [Matthew Bass]
+
 5/8/08 - Moved to github. [Matthew Bass]
 
 2/27/08 - Updated README. [Matthew Bass]
