--- a/README
+++ b/README
@@ -8,13 +8,11 @@ or just sanity check the output of the test.
 
 Install the gem directly:
 
-  gem sources -a http://gems.github.com (you only have to do this once)
-  sudo gem install pelargir-vizres
+  sudo gem install pelargir-vizres --source=http://gems.github.com
   
-Or install the gem in your Rails project:
+Or install the plugin in your Rails project:
   
-  gem sources -a http://gems.github.com
-  script/plugin install pelargir-vizres
+  script/plugin install git://github.com/pelargir/vizres.git
 
 Or clone the project:
 
